--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
 				<artifactId>event-api</artifactId>
 				<version>2.1</version>
 				<type>jar</type>
+				<scope>provided</scope>
 			</dependency>
 			
 			<dependency>
@@ -106,6 +107,7 @@
 				<artifactId>openhmis.inventory-api</artifactId>
 				<version>1.0.0-SNAPSHOT</version>
 				<type>jar</type>
+				<scope>provided</scope>
 			</dependency>
 
 			<dependency>
@@ -113,6 +115,7 @@
 				<artifactId>openhmis.cashier-api</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 				<type>jar</type>
+				<scope>provided</scope>
 			</dependency>
 
 		</dependencies>
